testdata/zkc/invalid/constant_invalid_02.zkc
;;error:2:18-21:bit overflow (u9 into u8)
const u8 LARGE = 255
const u8 LARGEPO = LARGE+1
